# haskell-exam-autograding

./: LICENSE  README.md  cabal.project  config.cabal
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
src/: Exam.hs
src/program/: Main.hs
test/: FirstSpec.hs  SecondSpec.hs
