cabal-version:      3.0
name:               exam
version:            1.0.0

library
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:  Exam
    build-depends:    base >=4.14

executable exam
    default-language: Haskell2010
    hs-source-dirs:   src/program
    main-is:          Main.hs
    build-depends:    base >=4.14,
                      exam

test-suite first
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          FirstSpec.hs
    build-depends:    base >=4.14,
                      hspec >=2.10,
                      QuickCheck >=2.14,
                      exam

test-suite second
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          SecondSpec.hs
    build-depends:    base >=4.14,
                      hspec >=2.10,
                      QuickCheck >=2.14,
                      exam
